agregando el about en el home

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="./images/np.png" sizes="64x64"
 
     <title>Hi, I'm Nicolás Posa</title>
   </head>
@@ -64,7 +65,7 @@
     </nav>
     <scroll-container>
       <scroll-page id="Home">
-        <h2 class="home-title">Hi, Im Nicolás Posa a frontend developer</h2>
+        <h2 class="home-title">Hi, I'm Nicolás Posa a frontend developer</h2>
         <div class="container-fluid home">
           <div class="area">
             <ul class="circles">
@@ -89,14 +90,12 @@
               <div class="img">
                 <img src="./images/profile.jpg" alt="" />
               </div>
-              <div class="description">
+              <div class="description text-center">
                 <h1 class="tittle-des">About Me</h1>
                 <p class="tex-des">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Earum, labore harum eos aperiam temporibus deserunt illo
-                  exercitationem? Eaque deleniti ex, velit quo magnam dolor
-                  sequi nulla esse in iusto accusamus.
+                  I'm a Front end developer based in Argentina. I like to be self-taught and working in a team, actualy using React tecnologies and I have passion for lear new tecnologies. I wrote my first pice of code at 3 years ago
                 </p>
+                <strong>I never want to stop learning</strong>
               </div>
             </div>
           </div>
@@ -177,6 +176,14 @@
                 alt=""
               />
               <h3 class="text-center">Gatsby</h3>
+            </div>
+            <div class="col-6 col-md-4 columna">
+              <img
+                src="./images/webpack.svg"
+                class="rounded mx-auto d-block"
+                alt=""
+              />
+              <h3 class="text-center">Webpack</h3>
             </div>
           </div>
         </div>
@@ -337,6 +344,30 @@
                 <div class="con-p">
                   <div class="project-content">
                     <a
+                      href="https://ps-nicoposa.netlify.app/"
+                      target="_blank"
+                      rel="noreferrer"
+                      class="Anchor-project"
+                    >
+                      <figure>
+                        <img
+                          src="./images/project/ecommerce.png"
+                          class="project-image"
+                          alt=""
+                        />
+                      </figure>
+                      <div class="con-text">
+                        <h4>Ecommerce</h4>
+                        <p>Gatsby styled-component</p>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-6 col-md-4 p-0">
+                <div class="con-p">
+                  <div class="project-content">
+                    <a
                       target="_blank"
                       rel="noreferrer"
                       class="Anchor-project"
@@ -376,30 +407,6 @@
                       <div class="con-text">
                         <h4>OP Construcciones</h4>
                         <p>Bootstrap css</p>
-                      </div>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-6 col-md-4 p-0">
-                <div class="con-p">
-                  <div class="project-content">
-                    <a
-                      href="https://nicoposa1.github.io/OPConstruccioness.github.io/"
-                      target="_blank"
-                      rel="noreferrer"
-                      class="Anchor-project"
-                    >
-                      <figure>
-                        <img
-                          src="./images/project/opc.png"
-                          class="project-image"
-                          alt=""
-                        />
-                      </figure>
-                      <div class="con-text">
-                        <h4>OP Construcciones</h4>
-                        <p>HTML css JS</p>
                       </div>
                     </a>
                   </div>
