add curiosity section

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <div class="description text-center">
                 <h1 class="tittle-des">About Me</h1>
                 <p class="tex-des">
-                  I'm a Front end developer based in Argentina. I like to be self-taught and working in a team, actualy using React tecnologies and I have passion for lear new tecnologies. I wrote my first pice of code at 3 years ago
+                  I'm a Front end developer based in Argentina. I like to be self-taught and working in a team, actualy using React tecnologies and I have passion for learn new tecnologies. I wrote my first pice of code at 3 years ago
                 </p>
                 <strong>I never want to stop learning</strong>
               </div>
@@ -488,6 +488,24 @@
           </div>
         </div>
       </scroll-page>
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Curiosity
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body"> 
+              A boring day of quarantine, scrolling on instagram. I decide to make a filter so i dowload Spark ar and i read the documentation for make it. Now the filters have more than 100k of views
+              <a href="https://www.instagram.com/nicoposa1/" target="_blank" >Look here</a>
+            </div>
+            <div class="text-center">
+              <img class="img-fluid" src="./images/project/sparkar.png" alt="spark ar analitycs">
+            </div>
+          </div>
+        </div>
+      </div>
       <scroll-page id="Contact">
         <div class="container-fluid contact pb-5">
           <div class="contact-tittle">
