--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/png" href="./images/np.png" sizes="64x64"
-
+    <link rel="icon" type="image/png" href="./images/np.png" sizes="64x64" />
     <title>Hi, I'm Nicolás Posa</title>
   </head>
   <body>
@@ -93,7 +92,10 @@
               <div class="description text-center">
                 <h1 class="tittle-des">About Me</h1>
                 <p class="tex-des">
-                  I'm a Front end developer based in Argentina. I like to be self-taught and working in a team, actualy using React tecnologies and I have passion for learn new tecnologies. I wrote my first pice of code at 3 years ago
+                  I'm a Front end developer based in Argentina. I like to be
+                  self-taught and working in a team, actualy using React
+                  tecnologies and I have passion for learn new tecnologies. I
+                  wrote my first pice of code at 3 years ago
                 </p>
                 <strong>I never want to stop learning</strong>
               </div>
@@ -491,17 +493,37 @@
       <div class="accordion" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseTwo"
+              aria-expanded="false"
+              aria-controls="collapseTwo"
+            >
               Curiosity
             </button>
           </h2>
-          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-            <div class="accordion-body"> 
-              A boring day of quarantine, scrolling on instagram. I decide to make a filter so i dowload Spark ar and i read the documentation for make it. Now the filters have more than 100k of views
-              <a href="https://www.instagram.com/nicoposa1/" target="_blank" >Look here</a>
+          <div
+            id="collapseTwo"
+            class="accordion-collapse collapse"
+            aria-labelledby="headingTwo"
+            data-bs-parent="#accordionExample"
+          >
+            <div class="accordion-body">
+              A boring day of quarantine, scrolling on instagram. I decide to
+              make a filter so i dowload Spark ar and i read the documentation
+              for make it. Now the filters have more than 100k of views
+              <a href="https://www.instagram.com/nicoposa1/" target="_blank"
+                >Look here</a
+              >
             </div>
             <div class="text-center">
-              <img class="img-fluid" src="./images/project/sparkar.png" alt="spark ar analitycs">
+              <img
+                class="img-fluid"
+                src="./images/project/sparkar.png"
+                alt="spark ar analitycs"
+              />
             </div>
           </div>
         </div>
