actualizando el cv y la descripción

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
               <div class="description text-center">
                 <h1 class="tittle-des">About Me</h1>
                 <p class="tex-des">
-                  I'm a Front end developer based in Argentina. I like to be
-                  self-taught and working in a team, actualy using React
-                  tecnologies and I have passion for learn new tecnologies. I
-                  wrote my first pice of code at 3 years ago
+                  I’m a Front end developer specialized in React based in
+                  Argentina who loves to take challenging projects. I enjoy
+                  developing fast and intuitive web pages and I have a passion
+                  for learning more about the IT world.
                 </p>
                 <strong>I never want to stop learning</strong>
               </div>
@@ -469,7 +469,7 @@
                       target="_blank"
                       rel="noreferrer"
                       class="Anchor-project"
-                      href="https://nicoposa1.github.io/ProyectoResponsive/"
+                      href="https://react-project-git-master.nicoposa.vercel.app/"
                     >
                       <figure>
                         <img
@@ -535,7 +535,7 @@
           </div>
           <div class="cv">
             <a
-              href="https://drive.google.com/file/d/1aLTJp1fiDU8CGsnrmrc2wn166ZgtVDT0/view?usp=sharing"
+              href="file:///C:/Users/nico/Downloads/curriculum-nicolasposa-frontend.pdf"
               target="_blank"
               class="anchor"
               rel="noreferrer"
