arreglando la url del cv

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
           </div>
           <div class="cv">
             <a
-              href="file:///C:/Users/nico/Downloads/curriculum-nicolasposa-frontend.pdf"
+              href="./images/curriculum-nicolasposa-frontend.pdf"
               target="_blank"
               class="anchor"
               rel="noreferrer"
