--- a/index.html
+++ b/index.html
@@ -511,9 +511,7 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              A boring day of quarantine, scrolling on instagram. I decide to
-              make a filter so i dowload Spark ar and i read the documentation
-              for make it. Now the filters have more than 100k of views
+              A boring day of the quarantine, scrolling on Instagram. I decide to make a filter so I dowload Spark ar and I read the documentation for making it. Now the filters have more than 100k of views, 
               <a href="https://www.instagram.com/nicoposa1/" target="_blank"
                 >Look here</a
               >
