--- a/index.html
+++ b/index.html
@@ -511,7 +511,10 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              A boring day of the quarantine, scrolling on Instagram. I decide to make a filter so I dowload Spark ar and I read the documentation for making it. Now the filters have more than 100k of views, 
+              A boring day of the quarantine, scrolling on Instagram. I decide
+              to make a filter so I dowload Spark ar and I read the
+              documentation for making it. Now the filters have more than 100k
+              of views,
               <a href="https://www.instagram.com/nicoposa1/" target="_blank"
                 >Look here</a
               >
@@ -533,7 +536,7 @@
           </div>
           <div class="cv">
             <a
-              href="./images/curriculum-nicolasposa-frontend.pdf"
+              href="./images/Frontend-Nicolás-Posa-cv.pdf"
               target="_blank"
               class="anchor"
               rel="noreferrer"
