cambio de cv y foto de perfil

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="cont-des" id="Me">
             <div class="child">
               <div class="img">
-                <img src="./images/profile.jpg" alt="" />
+                <img class="porfile-img" src="./images/profile.jpg" alt="" />
               </div>
               <div class="description text-center">
                 <h1 class="tittle-des">About Me</h1>
@@ -536,7 +536,7 @@
           </div>
           <div class="cv">
             <a
-              href="./images/Frontend-Nicolás-Posa-cv.pdf"
+              href="./images/Frontend-Nicolás-Posa.pdf"
               target="_blank"
               class="anchor"
               rel="noreferrer"
